tabs: fix left hand side spacing

--- a/tabs.css
+++ b/tabs.css
@@ -52,7 +52,7 @@
 	&[aria-selected="true"] {
 		--color-tab-border: var(--color-button-face);
 
-		margin: 0 -2px -1px -4px;
+		margin: 0 -2px -1px -2px;
 		padding: 3px 6px;
 		padding-left: 7px;
 
@@ -62,7 +62,7 @@
 }
 
 [role="tablist"] {
-	margin-left: 4px;
+	margin-left: 2px;
 
 	display: flex;
 }
